Add coffeescript support, remove stdin close.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "engines": {
         "node": "0.6.x"
     },
+    "dependencies": {
+        "coffee-script"       : "1.6.3",
+    },
     "main": "./lib/daemonize.js",
     "scripts": {
         "preinstall": "node-waf configure build"
